--- a/package.json
+++ b/package.json
@@ -150,5 +150,8 @@
     "languages": "js",
     "type": "library",
     "version": "0.54.2"
+  },
+  "dependencies": {
+    "react-native-svg": "^15.13.0"
   }
 }
