--- a/package.json
+++ b/package.json
@@ -76,15 +76,15 @@
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
-    "react": "19.0.0",
-    "react-native": "0.79.6",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-builder-bob": "^0.40.13",
     "release-it": "^19.0.4",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": "19.1.0",
+    "react-native": "0.81.5"
   },
   "workspaces": [
     "example"
